Bug 417254 - Blurred Glitch when showing and hiding the dock
Summary: Blurred Glitch when showing and hiding the dock
Status: RESOLVED FIXED
Alias: None
Product: lattedock
Classification: Unmaintained
Component: application (other bugs)
Version First Reported In: git (master)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Michail Vourlakos
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-02-07 05:47 UTC by Matty R
Modified: 2020-02-08 21:38 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.9.9
Sentry Crash Report:


Attachments
graphic glitch latte dock hiding showing (83.62 KB, image/png)
2020-02-07 05:47 UTC, Matty R
Details
Latte layouts (1.82 KB, application/gzip)
2020-02-07 05:58 UTC, Matty R
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Matty R 2020-02-07 05:47:47 UTC
Created attachment 125728 [details]
graphic glitch latte dock hiding showing

SUMMARY
When latte dock either hides, or is revealed and graphical glitch is present on the left hand side of the display.

STEPS TO REPRODUCE
1. Show Latte Dock
2. Hide Latte Dock

OBSERVED RESULT
Graphical glitch is shown, about 2 pixels high and varying length

EXPECTED RESULT
No glitch

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 5.17.5
KDE Frameworks Version: 5.66.0
Qt Version: 5.14.1
Kernel Version: 5.5.2-arch1-1
latte-dock-git r3706.229cff47-1

ADDITIONAL INFORMATION
Screenshot attached
Comment 1 Matty R 2020-02-07 05:58:05 UTC
Created attachment 125729 [details]
Latte layouts
Comment 2 Michail Vourlakos 2020-02-08 08:54:15 UTC
Git commit 1162b1e302387f74e0350c168364adffdfc4e21d by Michail Vourlakos.
Committed on 08/02/2020 at 08:53.
Pushed by mvourlakos into branch 'master'.

fix blur regions calculations

--do not send faulty blurred regions to KWin

M  +16   -19   app/view/effects.cpp

https://commits.kde.org/latte-dock/1162b1e302387f74e0350c168364adffdfc4e21d
Comment 3 Michail Vourlakos 2020-02-08 21:38:06 UTC
Git commit 4ff45510b2fc86b68dc237b070816392e62835ad by Michail Vourlakos.
Committed on 08/02/2020 at 21:32.
Pushed by mvourlakos into branch 'v0.9'.

fix blur regions calculations

--do not send faulty blurred regions to KWin
FIXED-IN:0.9.9

M  +16   -19   app/view/effects.cpp

https://commits.kde.org/latte-dock/4ff45510b2fc86b68dc237b070816392e62835ad