fix blur regions calculations

--do not send faulty blurred regions to KWin

BUG:417254